--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "bcrypt": "^5.0.1",
     "chart.js": "^3.7.1",
     "connect-flash": "^0.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "pg": "^8.7.3"
   }
